UI-2: tabnav, render new views

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-native": "0.46.1",
 		"react-native-material-kit": "^0.4.1",
 		"react-native-vector-icons": "^4.4.2",
+		"react-navigation": "^1.0.0-beta.19",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-thunk": "^2.2.0"
