--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"firebase": "^4.6.1",
+		"lodash": "^4.17.4",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.1",
 		"react-native-material-kit": "^0.4.1",
